feat: update database relation
